--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: humus
   mongodb:
-    image: mongo:3.4
+    image: mongo
     ports:
           - "27017:27017"
   backend:
