--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,10 @@ node_js:
 env:
   - DOCKER_COMPOSE_VERSION=2.3
 before_install:
-- sudo rm /usr/local/bin/docker-compose
+- rm /usr/local/bin/docker-compose
 - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
 - chmod +x docker-compose
-- sudo mv docker-compose /usr/local/bin
+- mv docker-compose /usr/local/bin
 - cd src/back-src
 - npm install -g node-gyp
 before_script:
