--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -1,18 +1,12 @@
-version: "2.3"
-
-#Database currently missing, to add later
-
 services:
   mariadb: # by default, expose 3306 port
     image: mariadb:10.2
-    restart: always
     environment:
       MYSQL_USER: root
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: humus
   mongodb:
-    image: mongo:3.4
-    restart: always
+    image: mongo
     ports:
           - "27017:27017"
   backend:
