--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2'
+version: "2.3"
 
 #Database currently missing, to add later
 
@@ -14,13 +14,13 @@ services:
     image: mongo:3.4
     restart: always
     ports:
-          - "27017:27017"
+      - "27017:27017"
   backend:
     build: ./back-src
     image: humus:back-dev
     volumes:
-      - ./back-src:/home/node/app
-      - /home/node/app/node_modules
+      - ./back-src:/home/node
+      - /home/node/node_modules
     environment:
       - NODE_ENV=development
     env_file:
@@ -34,8 +34,8 @@ services:
     build: ./front-src
     image: humus:front-dev
     volumes:
-      - ./front-src:/home/node/app
-      - /home/node/app/node_modules
+      - ./front-src:/home/node
+      - /home/node/node_modules
     ports:
       - "4200:4200"
     links:
