--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,7 @@ node_js:
 before_install:
 - cd src/back-src
 - npm install -g node-gyp
-- pm2 --version
-- npm install -g pm2
+- npm install pm2 -g
 - touch .env
 - echo "NODE_PORT=3000" >> .env
 before_script:
