--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,9 @@ cache:
 node_js:
 - 6
 before_install:
-- cd src/back-src 
+- cd src/back-src
 - npm install -g node-gyp
+- npm install -g pm2
 - touch .env
 - echo "NODE_PORT=3000" >> .env
 before_script:
