--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_install:
 before_script:
 - npm install -g standard
 - docker-compose build
-- docker-compose up
+- docker-compose up -d
 - sleep 3
 - mongo "localhost:27017/humus" --eval "db.dropDatabase();"
 script:
