--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ before_install:
 - cd src/back-src
 - npm install -g node-gyp
 - npm install -g pm2
+- pm2 update
 - touch .env
 - echo "NODE_PORT=3000" >> .env
 before_script:
