--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,10 @@ before_install:
 - npm install -g node-gyp
 - touch .env
 - echo "NODE_PORT=3000" >> .env
-- cd ../front-src
-- npm install -g node-gyp
 before_script:
 - npm install -g standard
 - docker-compose build
-- docker-compose up -d
+- docker-compose up
 - sleep 3
 - mongo "localhost:27017/humus" --eval "db.dropDatabase();"
 script:
