--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,9 @@ before_install:
 - echo "NODE_PORT=3000" >> .env
 before_script:
 - npm install -g standard
+- npm install -g gulp-cli
 - docker-compose build
-- sudo docker-compose up
+- docker-compose up
 - sleep 3
 - mongo "localhost:27017/humus" --eval "db.dropDatabase();"
 script:
