--- a/src/front-src/Dockerfile
+++ b/src/front-src/Dockerfile
@@ -2,11 +2,11 @@ FROM node:9
 
 USER node
 
-WORKDIR /home/node
+WORKDIR /home/node/front-src
 
-COPY ./package.json /home/node
+COPY ./package.json /home/node/front-src
 
-COPY ./package-lock.json /home/node
+COPY ./package-lock.json /home/node/front-src
 
 RUN npm install
 
