--- a/src/front-src/Dockerfile
+++ b/src/front-src/Dockerfile
@@ -2,6 +2,8 @@ FROM node:9
 
 USER node
 
+RUN mkdir -p /home/node/front-src
+
 WORKDIR /home/node/front-src
 
 COPY ./package.json /home/node/front-src
