--- a/src/front-src/Dockerfile
+++ b/src/front-src/Dockerfile
@@ -2,13 +2,13 @@ FROM node:9
 
 USER node
 
-RUN mkdir -p /home/node/front-src
+RUN mkdir -p /home/node/app/front-src
 
-WORKDIR /home/node/front-src
+WORKDIR /home/node/app/front-src
 
-COPY ./package.json /home/node/front-src
+COPY ./package.json /home/node/app/front-src
 
-COPY ./package-lock.json /home/node/front-src
+COPY ./package-lock.json /home/node/app/front-src
 
 RUN npm install
 
