--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_script:
 - npm install -g standard
 - npm install -g gulp-cli
 - docker-compose build
-- docker-compose up
+- docker-compose up -d
 - sleep 3
 - mongo "localhost:27017/humus" --eval "db.dropDatabase();"
 script:
